--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,13 @@ jobs:
       run: |
         sudo apt-get update -y
         sudo apt-get install build-essential python3-pip -y
-        pip install jupyter-book=1.0.0 jupyterquiz=2.6.3
+        pip install jupyter-book==1.0.0 jupyterquiz==2.6.3
 
     - name: Build book
-      run: make build
+      run: jupyter-book build .
 
     - name: Deploy book
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_html
+        publish_dir: ./_build/html
